--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -43,9 +43,9 @@
           <div class="inner">
             <h1 class="heading">AMERICAN CIVIL WAR HISTORY</h1>
             <div data-readmore class="text">
-              <p>The Amarican civil war was from 1861 to 1865. It happened because issues came from the northern and southern
-                United States such as slavery, westward expansion.By the time it ended in 1865, over 620 thousand of 2.4
-                million soldiers killed, millions people was injured and the South of Amarica destroyed</p>
+              <p>The American civil war was from 1861 to 1865. It started because the northern and the southern United States
+                had got many issues, such as slavery and westward expansion. By the time it ended in 1865, over 620 thousand
+                of 2.4 million soldiers killed, millions people was injured and the South destroyed</p>
             </div>
           </div>
         </div>
@@ -103,7 +103,9 @@
                   <span class="line-1"></span>
                 </h3>
                 <div class="caption">
-                  <p class="name">after the emancipation proclamation</p>
+                  <p class="name">after
+                    <mark>the emancipation proclamation</mark>
+                  </p>
                   <br><br>
                   <p>Aoste, toujours là pour vous servir !</p>
                   <p><strong>1<sup>ere &nbsp;</sup>gamme de produit vendu en frais emballé.</strong></p>
@@ -116,7 +118,7 @@
                   <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
                   <div class="content">
                     <h3 class="num"><span class="year">1864 - 1865</span></h3>
-                    <p class="name">toward a union victory</p>
+                    <p class="name">a union victory</p>
                     <br><br>
                     <p class="caption">Aoste propose aux consommateurs un Voyage sensoriel &amp; sélectionne pour eux les principales origines
                       de jambon cru (bayonne et serrano), des saucissons de qualité supérieure et de la Viandes des Grisons.</p>
@@ -131,6 +133,22 @@
         <div data-last-point="true" class="last-point"></div>
       </div>
     </main>
+    <footer class="main-footer">
+      <div class="footer-top">
+        <div class="grid-fluid">
+          <div class="footer-item-1">
+            <ul class="footer-link">
+              <li><a href="http://www.history.com/topics/american-civil-war/american-civil-war-history" title="American civil war history"
+                  target="_blank">American civil war history</a>
+              </li>
+              <li><a href="https://www.civilwar.org/learn/articles/brief-overview-american-civil-war" title="Brief overview american civil war"
+                  target="_blank">Brief overview american civil war</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
   <script src="js/modernizr.js"></script>
   <script src="js/libs.js"></script>
