--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -45,7 +45,8 @@
             <div data-readmore class="text">
               <p>The American civil war was from 1861 to 1865. It started because the northern and the southern United States
                 had got many issues, such as slavery and westward expansion. By the time it ended in 1865, over 620 thousand
-                of 2.4 million soldiers killed, millions people was injured and the South destroyed</p>
+                of 2.4 million soldiers killed, millions people was
+                <mark>injured</mark> and the South destroyed</p>
             </div>
           </div>
         </div>
@@ -64,10 +65,10 @@
                   <div class="node"><span data-point class="point-2"></span><span class="line-2"></span></div>
                   <div class="content">
                     <div class="inner">
-                      <h2 class="name">outbreak of the civil war</h2>
+                      <h2 class="name">Outbreak of the civil war</h2>
                       <div class="desc">
-                        <p>Aoste propose un jambon cru d’exception inspiré du jambon de parme, vendu en pièce entière au rayon
-                          coupe des hypermarchés</p>
+                        <p>The battle of
+                          <mark>Fort Sumter</mark> triggered the civil war on April 12</p>
                       </div>
                     </div>
                   </div>
@@ -78,37 +79,30 @@
             </div>
             <div class="timeline-item style-5 timeline-left">
               <div class="wrapper">
-                <h3 class="num"><span class="year">1862</span><span data-point class="point-2"></span><span class="line-1"></span></h3>
-              </div>
-            </div>
-            <div class="timeline-item style-1 timeline-left">
-              <div class="wrapper">
-                <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-2"></span></div>
-                  <div class="content">
-                    <h2 class="name">the civil war in virginia</h2>
-                    <div class="desc">
-                      <p>Aoste pionnier : la marque fait connaitre le jambon cru aux français en le rendant accessible avec
-                        le 1er jambon cru pré tranché vendu en grandes surfaces, c’est la naissance des Grandes Tranches</p>
-                    </div>
-                  </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1862.jpg" alt="1862" width="300" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="timeline-item style-5 timeline-right">
-              <div class="wrapper">
-                <h3 class="num"><span class="year">1863</span><span data-point class="point-2"></span>
+                <h3 class="num"><span class="year">1862</span><span data-point class="point-2"></span>
                   <span class="line-1"></span>
                 </h3>
                 <div class="caption">
-                  <p class="name">after
-                    <mark>the emancipation proclamation</mark>
-                  </p>
-                  <br><br>
-                  <p>Aoste, toujours là pour vous servir !</p>
-                  <p><strong>1<sup>ere &nbsp;</sup>gamme de produit vendu en frais emballé.</strong></p>
+                  <p>The real fighting began in 1862. Huge battles such
+                    <mark>Shiloh</mark> in Tennessee, Gaines' Mill, Second Manassas, and
+                    <mark>Fredericksburg</mark> in Virginia, and
+                    <mark>Antietam</mark> in Maryland</p>
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item style-3 timeline-right">
+              <div class="wrapper">
+                <div class="outer">
+                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
+                  <div class="content">
+                    <h3 class="num"><span class="year">1863</span></h3>
+                    <p class="name">The
+                      <mark>emancipation proclamation</mark>
+                    </p>
+                    <br><br>
+                    <p class="caption">Lincoln based on the Union victory at Antietam to make a draft Emancipation Proclamation to free all
+                      slaves in the rebellious states after January 1</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -117,11 +111,28 @@
                 <div class="outer">
                   <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
                   <div class="content">
-                    <h3 class="num"><span class="year">1864 - 1865</span></h3>
+                    <h3 class="num"><span class="year">1864</span></h3>
                     <p class="name">a union victory</p>
                     <br><br>
                     <p class="caption">Aoste propose aux consommateurs un Voyage sensoriel &amp; sélectionne pour eux les principales origines
                       de jambon cru (bayonne et serrano), des saucissons de qualité supérieure et de la Viandes des Grisons.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item style-3 timeline-right">
+              <div class="wrapper">
+                <div class="outer">
+                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
+                  <div class="content">
+                    <h3 class="num"><span class="year">1865</span></h3>
+                    <p class="name">End of war</p>
+                    <br><br>
+                    <p class="caption">The Confederacy
+                      <mark>surrendered</mark> to the Union at a place called
+                      <mark>Appomattox</mark>, Virginia at the Court House on April 9. The last land battle that the war technically
+                      had was the battle of Palmito Ranch which took place in Palmito Ranch in Texas. This battle took place
+                      from May 12 to 13. The Confederacy had a victory for this battle. But the Union won the war</p>
                   </div>
                   <div itemscope itemtype class="img-product"><img src="assets/images/upload/1864-65.jpg" alt="1864-65" width="284" height="432" />
                   </div>
@@ -143,6 +154,11 @@
               </li>
               <li><a href="https://www.civilwar.org/learn/articles/brief-overview-american-civil-war" title="Brief overview american civil war"
                   target="_blank">Brief overview american civil war</a>
+              </li>
+              <li><a href="https://www.civilwar.org/learn/articles/day-civil-war" title="This day in the civil war" target="_blank">This day in the civil war</a>
+              </li>
+              <li><a href="https://www.emaze.com/@ATOFRROZ/Battles-of-the-War-Between-the-States" title="Battles of the war between the States"
+                  target="_blank">Battles of the war between the States</a>
               </li>
             </ul>
           </div>
