--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -43,9 +43,9 @@
           <div class="inner">
             <h1 class="heading">AMERICAN CIVIL WAR HISTORY</h1>
             <div data-readmore class="text">
-              <p>The American civil war was from 1861 to 1865. It started because the northern and the southern United States
-                had got many issues, such as slavery and westward expansion. By the time it ended in 1865, over 620 thousand
-                of 2.4 million soldiers killed, millions people was
+              <p>The American civil war was from 1861 to 1865. It started because the northern(Union side) and the southern(Confederacy
+                side) United States had got many issues, such as slavery and westward expansion. By the time it ended in
+                1865, over 620 thousand of 2.4 million soldiers killed, millions people was
                 <mark>injured</mark> and the South destroyed</p>
             </div>
           </div>
@@ -106,17 +106,16 @@
                 </div>
               </div>
             </div>
-            <div class="timeline-item style-3 timeline-left">
+            <div class="timeline-item style-5 timeline-left">
               <div class="wrapper">
-                <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
-                  <div class="content">
-                    <h3 class="num"><span class="year">1864</span></h3>
-                    <p class="name">a union victory</p>
-                    <br><br>
-                    <p class="caption">Aoste propose aux consommateurs un Voyage sensoriel &amp; sélectionne pour eux les principales origines
-                      de jambon cru (bayonne et serrano), des saucissons de qualité supérieure et de la Viandes des Grisons.</p>
-                  </div>
+                <h3 class="num"><span class="year">1864</span><span data-point class="point-2"></span>
+                  <span class="line-1"></span>
+                </h3>
+                <div class="caption">
+                  <p>By 1864 the original Northern goal of a limited war to restore the Union had given way to a new strategy
+                    of "total war" to destroy the Old South and its basic institution of slavery and to give the restored
+                    Union a "new birth of freedom," as President Lincoln put it in his address at Gettysburg to dedicate
+                    a cemetery for Union soldiers killed in the battle there</p>
                 </div>
               </div>
             </div>
