--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -43,9 +43,10 @@
           <div class="inner">
             <h1 class="heading">AMERICAN CIVIL WAR HISTORY</h1>
             <div data-readmore class="text">
-              <p>The American civil war was from 1861 to 1865. It started because the northern(Union side) and the southern(Confederacy
-                side) United States had got many issues, such as slavery and westward expansion. By the time it ended in
-                1865, over 620 thousand of 2.4 million soldiers killed, millions people was
+              <p>The American civil war was from 1861 to 1865. It started because the Northern(Union side) and the Southern(
+                <mark>Confederacy</mark>
+                side) United States had got many issues, such as slavery and westward expansion. By the time it ended in 1865, over 620 thousand
+                of 2.4 million soldiers killed, millions people was
                 <mark>injured</mark> and the South destroyed</p>
             </div>
           </div>
@@ -77,16 +78,21 @@
                 </div>
               </div>
             </div>
-            <div class="timeline-item style-5 timeline-left">
+            <div class="timeline-item style-3 timeline-left">
               <div class="wrapper">
-                <h3 class="num"><span class="year">1862</span><span data-point class="point-2"></span>
-                  <span class="line-1"></span>
-                </h3>
-                <div class="caption">
-                  <p>The real fighting began in 1862. Huge battles such
-                    <mark>Shiloh</mark> in Tennessee, Gaines' Mill, Second Manassas, and
-                    <mark>Fredericksburg</mark> in Virginia, and
-                    <mark>Antietam</mark> in Maryland</p>
+                <div class="outer">
+                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
+                  <div class="content">
+                    <h3 class="num"><span class="year">1862</span></h3>
+                    <p class="name">The real civil war</p>
+                    <br><br>
+                    <p class="caption">The real fighting began in 1862. Huge battles such
+                      <mark>Shiloh</mark> in Tennessee, Gaines' Mill, Second Manassas, and
+                      <mark>Fredericksburg</mark> in Virginia, and
+                      <mark>Antietam</mark> in Maryland</p>
+                  </div>
+                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1862.jpg" alt="1861" width="300" />
+                  </div>
                 </div>
               </div>
             </div>
@@ -96,12 +102,15 @@
                   <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
                   <div class="content">
                     <h3 class="num"><span class="year">1863</span></h3>
-                    <p class="name">The
-                      <mark>emancipation proclamation</mark>
+                    <p class="name">
+                      <mark>A emancipation proclamation</mark>
                     </p>
                     <br><br>
-                    <p class="caption">Lincoln based on the Union victory at Antietam to make a draft Emancipation Proclamation to free all
-                      slaves in the rebellious states after January 1</p>
+                    <p class="caption">Lincoln based on the Union victory at Antietam to make the draft emancipation proclamation to free all
+                      slaves in
+                      <mark>rebellious states</mark> after January 1</p>
+                  </div>
+                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1863.jpg" alt="1861" width="230" height="230" />
                   </div>
                 </div>
               </div>
@@ -127,11 +136,10 @@
                     <h3 class="num"><span class="year">1865</span></h3>
                     <p class="name">End of war</p>
                     <br><br>
-                    <p class="caption">The Confederacy
-                      <mark>surrendered</mark> to the Union at a place called
-                      <mark>Appomattox</mark>, Virginia at the Court House on April 9. The last land battle that the war technically
-                      had was the battle of Palmito Ranch which took place in Palmito Ranch in Texas. This battle took place
-                      from May 12 to 13. The Confederacy had a victory for this battle. But the Union won the war</p>
+                    <p class="caption">By the spring of 1865 all the Confederate armies
+                      <mark>surrendered</mark>, and the war ended when Union
+                      <mark>cavalry</mark> captured
+                      <mark>the fleeing Confederate President Jefferson Davis</mark> in Georgia on May 10</p>
                   </div>
                   <div itemscope itemtype class="img-product"><img src="assets/images/upload/1864-65.jpg" alt="1864-65" width="284" height="432" />
                   </div>
