--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -12,8 +12,8 @@
 
 <body data-scrolling-animation data-prefill-form class="notre-histoire default-page">
   <div data-paralax class="cover-images">
-    <div data-img-background="1" style="background-image: url(assets/images/upload/bg-main-mo.jpeg)" data-0="background-position:center 0px;"
-      data-450="background-position:center -50px;" data-interchange="['assets/images/upload/bg-main-mo.jpeg', 'assets/images/upload/bg-main.jpeg']"
+    <div data-img-background="1" style="background-image: url(assets/images/upload/bg-main-mo.png)" data-0="background-position:center 0px;"
+      data-450="background-position:center -50px;" data-interchange="['assets/images/upload/bg-main-mo.png', 'assets/images/upload/bg-main.png']"
       class="bgd-cover animation-in"></div>
   </div>
   <div class="container">
