--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -12,8 +12,9 @@
 
 <body data-scrolling-animation data-prefill-form class="notre-histoire default-page">
   <div data-paralax class="cover-images">
-    <div data-img-background="1" style="background-image: url(assets/images/upload/bg-main-mo.png)" data-0="background-position:center 0px;"
-      data-450="background-position:center -50px;" data-interchange="['assets/images/upload/bg-main-mo.png', 'assets/images/upload/bg-main.png']"
+    <div data-img-background="1" style="background-image: url(assets/images/upload/bg-main-mo.png)"
+      data-0="background-position:center 0px;" data-450="background-position:center -50px;"
+      data-interchange="['assets/images/upload/bg-main-mo.png', 'assets/images/upload/bg-main.png']"
       class="bgd-cover animation-in"></div>
   </div>
   <div class="container">
@@ -21,14 +22,16 @@
       <section class="breadcrumb">
         <div class="grid-fluid">
           <ol itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-            <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="index.html" title="Home" itemprop="item"><span itemprop="name">Home</span></a><span class="icon icon-nav"></span>
+            <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="index.html" title="Home" itemprop="item"><span itemprop="name">Home</span></a>
+              <span class="icon icon-nav"></span>
               <meta itemprop="position" content="1" />
             </li>
             <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="la-maison.html" title="La Maison Aoste" itemprop="item"><span itemprop="name">La Maison Aoste</span></a>
               <span class="icon icon-nav"></span>
               <meta itemprop="position" content="2" />
             </li>
-            <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem" class="last"><span itemprop="name">Notre Histoire</span>
+            <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"
+              class="last"><span itemprop="name">Notre Histoire</span>
               <meta itemprop="position" content="3" />
             </li>
           </ol>
@@ -43,10 +46,12 @@
           <div class="inner">
             <h1 class="heading">AMERICAN CIVIL WAR HISTORY</h1>
             <div data-readmore class="text">
-              <p>The American civil war was from 1861 to 1865. It started because the Northern(Union side) and the Southern(
+              <p>The American civil war was from 1861 to 1865. It started because the
+                Northern(Union side) and the Southern(
                 <mark>Confederacy</mark>
-                side) United States had got many issues, such as slavery and westward expansion. By the time it ended in 1865, over 620 thousand
-                of 2.4 million soldiers killed, millions people was
+                side) United States had got many issues, such as slavery and westward expansion.
+                By the time it ended in 1865, over 620 thousand of 2.4 million soldiers
+                killed, millions people was
                 <mark>injured</mark> and the South destroyed</p>
             </div>
           </div>
@@ -57,13 +62,17 @@
           <div class="timeline-wrapper">
             <div class="timeline-item style-5 timeline-right">
               <div class="wrapper">
-                <h3 class="num"><span class="year">1861</span><span data-point class="point-2"></span><span class="line-1"></span></h3>
+                <h3 class="num"><span class="year">1861</span><span data-point class="point-2"></span>
+                  <span class="line-1"></span>
+                </h3>
               </div>
             </div>
             <div class="timeline-item style-1 timeline-right">
               <div class="wrapper">
                 <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-2"></span></div>
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-2"></span>
+                  </div>
                   <div class="content">
                     <div class="inner">
                       <h2 class="name">Outbreak of the civil war</h2>
@@ -73,7 +82,8 @@
                       </div>
                     </div>
                   </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1861.jpg" alt="1861" width="320" height="192" />
+                  <div class="img-product"><img src="assets/images/upload/1861.jpg" alt="1861" width="320"
+                      height="192" />
                   </div>
                 </div>
               </div>
@@ -81,17 +91,21 @@
             <div class="timeline-item style-3 timeline-left">
               <div class="wrapper">
                 <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-1"></span>
+                  </div>
                   <div class="content">
                     <h3 class="num"><span class="year">1862</span></h3>
                     <p class="name">The real civil war</p>
                     <br><br>
                     <p class="caption">The real fighting began in 1862. Huge battles such
-                      <mark>Shiloh</mark> in Tennessee, Gaines' Mill, Second Manassas, and
+                      <mark>Shiloh</mark> in Tennessee, Gaines' Mill, Second Manassas,
+                      and
                       <mark>Fredericksburg</mark> in Virginia, and
                       <mark>Antietam</mark> in Maryland</p>
                   </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1862.jpg" alt="1861" width="300" />
+                  <div class="img-product"><img src="assets/images/upload/1862.jpg" alt="1861" width="300"
+                    />
                   </div>
                 </div>
               </div>
@@ -99,18 +113,22 @@
             <div class="timeline-item style-3 timeline-right">
               <div class="wrapper">
                 <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-1"></span>
+                  </div>
                   <div class="content">
                     <h3 class="num"><span class="year">1863</span></h3>
                     <p class="name">
                       <mark>A emancipation proclamation</mark>
                     </p>
                     <br><br>
-                    <p class="caption">Lincoln based on the Union victory at Antietam to make the draft emancipation proclamation to free all
-                      slaves in
-                      <mark>rebellious states</mark> after January 1</p>
+                    <p class="caption">Lincoln based on the Union victory at Antietam to make the draft
+                      emancipation proclamation to free all slaves in
+                      <mark>rebellious states</mark> after January 1
+                    </p>
                   </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1863.jpg" alt="1861" width="230" height="230" />
+                  <div class="img-product"><img src="assets/images/upload/1863.jpg" alt="1861" width="230"
+                      height="230" />
                   </div>
                 </div>
               </div>
@@ -121,17 +139,24 @@
                   <span class="line-1"></span>
                 </h3>
                 <div class="caption">
-                  <p>By 1864 the original Northern goal of a limited war to restore the Union had given way to a new strategy
-                    of "total war" to destroy the Old South and its basic institution of slavery and to give the restored
-                    Union a "new birth of freedom," as President Lincoln put it in his address at Gettysburg to dedicate
-                    a cemetery for Union soldiers killed in the battle there</p>
+                  <p>By 1864 the original Northern goal was restorative the Union. But
+                    it created
+                    <mark>a new strategy</mark> to destroy the Old South and its slavery
+                    and giving the restored Union a "new birth of freedom" as President
+                    Lincoln put it
+                    <mark>in his address</mark> at
+                    <mark>Gettysburg</mark> to memorize Union soldiers killed in the battle
+                    there
+                  </p>
                 </div>
               </div>
             </div>
             <div class="timeline-item style-3 timeline-right">
               <div class="wrapper">
                 <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-1"></span>
+                  </div>
                   <div class="content">
                     <h3 class="num"><span class="year">1865</span></h3>
                     <p class="name">End of war</p>
@@ -139,9 +164,11 @@
                     <p class="caption">By the spring of 1865 all the Confederate armies
                       <mark>surrendered</mark>, and the war ended when Union
                       <mark>cavalry</mark> captured
-                      <mark>the fleeing Confederate President Jefferson Davis</mark> in Georgia on May 10</p>
+                      <mark>the fleeing Confederate President Jefferson Davis
+                      </mark> in Georgia on May 10</p>
                   </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1864-65.jpg" alt="1864-65" width="284" height="432" />
+                  <div class="img-product"><img src="assets/images/upload/1864-65.jpg" alt="1864-65" width="284"
+                      height="432" />
                   </div>
                 </div>
               </div>
@@ -156,16 +183,17 @@
         <div class="grid-fluid">
           <div class="footer-item-1">
             <ul class="footer-link">
-              <li><a href="http://www.history.com/topics/american-civil-war/american-civil-war-history" title="American civil war history"
-                  target="_blank">American civil war history</a>
+              <li><a href="http://www.history.com/topics/american-civil-war/american-civil-war-history"
+                  title="American civil war history" target="_blank">American civil war history</a>
               </li>
-              <li><a href="https://www.civilwar.org/learn/articles/brief-overview-american-civil-war" title="Brief overview american civil war"
-                  target="_blank">Brief overview american civil war</a>
+              <li><a href="https://www.civilwar.org/learn/articles/brief-overview-american-civil-war"
+                  title="Brief overview american civil war" target="_blank">Brief overview american civil war</a>
               </li>
-              <li><a href="https://www.civilwar.org/learn/articles/day-civil-war" title="This day in the civil war" target="_blank">This day in the civil war</a>
+              <li><a href="https://www.civilwar.org/learn/articles/day-civil-war" title="This day in the civil war"
+                  target="_blank">This day in the civil war</a>
               </li>
-              <li><a href="https://www.emaze.com/@ATOFRROZ/Battles-of-the-War-Between-the-States" title="Battles of the war between the States"
-                  target="_blank">Battles of the war between the States</a>
+              <li><a href="https://www.emaze.com/@ATOFRROZ/Battles-of-the-War-Between-the-States"
+                  title="Battles of the war between the States" target="_blank">Battles of the war between the States</a>
               </li>
             </ul>
           </div>
