--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -122,8 +122,7 @@
                       <mark>A emancipation proclamation</mark>
                     </p>
                     <br><br>
-                    <p class="caption">Lincoln based on the Union victory at Antietam to make the draft
-                      emancipation proclamation to free all slaves in
+                    <p class="caption">Lincoln based on the Union victory at Antietam to make the emancipation proclamation to free all slaves in
                       <mark>rebellious states</mark> after January 1
                     </p>
                   </div>
