--- a/american-civil-war-full.html
+++ b/american-civil-war-full.html
@@ -142,8 +142,7 @@
                     it created
                     <mark>a new strategy</mark> to destroy the Old South and its slavery
                     and giving the restored Union a "new birth of freedom" as President
-                    Lincoln put it
-                    <mark>in his address</mark> at
+                    Lincoln said at
                     <mark>Gettysburg</mark> to memorize Union soldiers killed in the battle
                     there
                   </p>
