--- a/american-civil-war.html
+++ b/american-civil-war.html
@@ -12,8 +12,8 @@
 
 <body data-scrolling-animation data-prefill-form class="notre-histoire default-page">
   <div data-paralax class="cover-images">
-    <div data-img-background="1" style="background-image: url(assets/images/upload/bg-main-mo.jpeg)" data-0="background-position:center 0px;"
-      data-450="background-position:center -50px;" data-interchange="['assets/images/upload/bg-main-mo.jpeg', 'assets/images/upload/bg-main.jpeg']"
+    <div data-img-background="1" style="background-image: url(assets/images/upload/bg-main-mo.png)" data-0="background-position:center 0px;"
+      data-450="background-position:center -50px;" data-interchange="['assets/images/upload/bg-main-mo.png', 'assets/images/upload/bg-main.png']"
       class="bgd-cover animation-in"></div>
   </div>
   <div class="container">
@@ -21,7 +21,8 @@
       <section class="breadcrumb">
         <div class="grid-fluid">
           <ol itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-            <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="index.html" title="Home" itemprop="item"><span itemprop="name">Home</span></a><span class="icon icon-nav"></span>
+            <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="index.html" title="Home" itemprop="item"><span itemprop="name">Home</span></a>
+              <span class="icon icon-nav"></span>
               <meta itemprop="position" content="1" />
             </li>
             <li itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="la-maison.html" title="La Maison Aoste" itemprop="item"><span itemprop="name">La Maison Aoste</span></a>
@@ -43,9 +44,11 @@
           <div class="inner">
             <h1 class="heading">AMERICAN CIVIL WAR HISTORY</h1>
             <div data-readmore class="text">
-              <p>The Amarican civil war was from 1861 to 1865. It happened because issues came from the northern and southern
-                United States such as slavery, westward expansion.By the time it ended in 1865, over 620 thousand of 2.4
-                million soldiers killed, millions people was injured and the South of Amarica destroyed</p>
+              <p>The American civil war was from 1861 to 1865. It started because the Northern(Union side) and the Southern(
+                Confederacy side) United States had got many issues, such as slavery and westward expansion. By the time
+                it ended in 1865, over 620 thousand of 2.4 million soldiers killed, millions people was injured and the South
+                destroyed
+              </p>
             </div>
           </div>
         </div>
@@ -55,59 +58,96 @@
           <div class="timeline-wrapper">
             <div class="timeline-item style-5 timeline-right">
               <div class="wrapper">
-                <h3 class="num"><span class="year">1861</span><span data-point class="point-2"></span><span class="line-1"></span></h3>
+                <h3 class="num"><span class="year">1861</span><span data-point class="point-2"></span>
+                  <span class="line-1"></span>
+                </h3>
               </div>
             </div>
             <div class="timeline-item style-1 timeline-right">
               <div class="wrapper">
                 <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-2"></span></div>
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-2"></span>
+                  </div>
                   <div class="content">
                     <div class="inner">
-                      <h2 class="name">outbreak of the civil war</h2>
+                      <h2 class="name">Outbreak of the civil war</h2>
+                      <div class="desc hide">
+                        <p>The battle of Fort Sumter triggered the civil war on April 12</p>
+                      </div>
                     </div>
                   </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1861.jpg" alt="1861" width="320" height="192" />
+                  <div class="img-product"><img src="assets/images/upload/1861.jpg" alt="1861" width="320" height="192" />
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="timeline-item style-5 timeline-left">
-              <div class="wrapper">
-                <h3 class="num"><span class="year">1862</span><span data-point class="point-2"></span><span class="line-1"></span></h3>
-              </div>
-            </div>
-            <div class="timeline-item style-1 timeline-left">
-              <div class="wrapper">
-                <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-2"></span></div>
-                  <div class="content">
-                    <h2 class="name">the civil war in virginia</h2>
-                  </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1862.jpg" alt="1862" width="300" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="timeline-item style-5 timeline-right">
-              <div class="wrapper">
-                <h3 class="num"><span class="year">1863</span><span data-point class="point-2"></span>
-                  <span class="line-1"></span>
-                </h3>
-                <div class="caption">
-                  <p class="name">after the emancipation proclamation</p>
                 </div>
               </div>
             </div>
             <div class="timeline-item style-3 timeline-left">
               <div class="wrapper">
                 <div class="outer">
-                  <div class="node"><span data-point class="point-2"></span><span class="line-1"></span></div>
-                  <div class="content">
-                    <h3 class="num"><span class="year">1864 - 1865</span></h3>
-                    <p class="name">toward a union victory</p>
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-1"></span>
                   </div>
-                  <div itemscope itemtype class="img-product"><img src="assets/images/upload/1864-65.jpg" alt="1864-65" width="284" height="432" />
+                  <div class="content">
+                    <h3 class="num"><span class="year">1862</span></h3>
+                    <p class="name">The real civil war</p>
+                    <br><br>
+                    <p class="caption hide">The real fighting began in 1862. Huge battles such Shiloh in Tennessee, Gaines' Mill, Second Manassas,
+                      and Fredericksburg in Virginia, and Antietam in Maryland</p>
+                  </div>
+                  <div class="img-product"><img src="assets/images/upload/1862.jpg" alt="1861" width="300" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item style-3 timeline-right">
+              <div class="wrapper">
+                <div class="outer">
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-1"></span>
+                  </div>
+                  <div class="content">
+                    <h3 class="num"><span class="year">1863</span></h3>
+                    <p class="name">
+                      A emancipation proclamation
+                    </p>
+                    <br><br>
+                    <p class="caption hide">Lincoln based on the Union victory at Antietam to make the emancipation proclamation to free all slaves
+                      in rebellious states after January 1
+                    </p>
+                  </div>
+                  <div class="img-product"><img src="assets/images/upload/1863.jpg" alt="1861" width="230" height="230" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item style-5 timeline-left">
+              <div class="wrapper">
+                <h3 class="num"><span class="year">1864</span><span data-point class="point-2"></span>
+                  <span class="line-1"></span>
+                </h3>
+                <div class="caption" style="visibility: hidden">
+                  <p>By 1864 the original Northern goal was restorative the Union. But it created a new strategy to destroy
+                    the Old South and its slavery and giving the restored Union a "new birth of freedom" as President Lincoln
+                    said at Gettysburg to memorize Union soldiers killed in the battle there
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item style-3 timeline-right">
+              <div class="wrapper">
+                <div class="outer">
+                  <div class="node"><span data-point class="point-2"></span>
+                    <span class="line-1"></span>
+                  </div>
+                  <div class="content">
+                    <h3 class="num"><span class="year">1865</span></h3>
+                    <p class="name">End of war</p>
+                    <br><br>
+                    <p class="caption hide">By the spring of 1865 all the Confederate armies surrendered, and the war ended when Union cavalry captured
+                      the fleeing Confederate President Jefferson Davis in Georgia on May 10</p>
+                  </div>
+                  <div class="img-product"><img src="assets/images/upload/1864-65.jpg" alt="1864-65" width="284" height="432" />
                   </div>
                 </div>
               </div>
@@ -117,6 +157,27 @@
         <div data-last-point="true" class="last-point"></div>
       </div>
     </main>
+    <footer class="main-footer">
+      <div class="footer-top">
+        <div class="grid-fluid">
+          <div class="footer-item-1">
+            <ul class="footer-link">
+              <li><a href="http://www.history.com/topics/american-civil-war/american-civil-war-history" title="American civil war history"
+                  target="_blank">American civil war history</a>
+              </li>
+              <li><a href="https://www.civilwar.org/learn/articles/brief-overview-american-civil-war" title="Brief overview american civil war"
+                  target="_blank">Brief overview american civil war</a>
+              </li>
+              <li><a href="https://www.civilwar.org/learn/articles/day-civil-war" title="This day in the civil war" target="_blank">This day in the civil war</a>
+              </li>
+              <li><a href="https://www.emaze.com/@ATOFRROZ/Battles-of-the-War-Between-the-States" title="Battles of the war between the States"
+                  target="_blank">Battles of the war between the States</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
   <script src="js/modernizr.js"></script>
   <script src="js/libs.js"></script>
